--- a/INSIDE/20/index.html
+++ b/INSIDE/20/index.html
@@ -41,7 +41,7 @@
         <div id="card">
             <h4>💘Gửi Trương Thị Minh Thư💘</h4>
             <img src="./20.jpg" class="img1">
-            <h4>Chúc bạn Thư Đẹn 8/3 thật vui vẻ, làm gì sắp tới cũng thành công, đừng cao thêm nữa nha, nói chuyện nhỏ tiếng lại chút là oke!</h4>
+            <h4>Chúc bạn Thư Đẹn 8/3 thật vui vẻ, làm gì sắp tới cũng thành công, luôn luôn hoạt bát và xinh đẹp!!!</h4>
         </div>
     </div>
 </body>
