--- a/INSIDE/28/index.html
+++ b/INSIDE/28/index.html
@@ -40,7 +40,7 @@
 
         <div id="card">
             <h4>💘Gửi học trò cưng💘</h4>
-            <img src="./0.jpg" class="img1">
+            <img src="./10.png" class="img1">
             <h4>Tuy hết 8/3 rồi nhưng mà hlinh X tduong!!! hihi💚</h4>
         </div>
     </div>
